pgadmin/pgadmin4-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: pgadmin4
  name: pgadmin4
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: pgadmin4
  type: ClusterIP
status:
  loadBalancer: {}
